fixing bad API call for included genres, sidebar overflow

--- a/css/layout.css
+++ b/css/layout.css
@@ -25,6 +25,7 @@
   background-color: #064663;
   margin-left: 50vw;
   padding: 1.5rem 2.5rem;
+  overflow: auto;
 }
 
 .blur {
